tests/09-non-default-field.stderr
error[E0277]: the trait bound `NonDefault: std::default::Default` is not satisfied
 --> $DIR/09-non-default-field.rs:8:5
  |
8 |     non_default: NonDefault,
  |     ^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `NonDefault`
  |
  = note: required by `std::default::Default::default`
